welcome form company legal, fixed checkbox breaking layout on mobile

--- a/app/assets/stylesheets/media_queries.scss
+++ b/app/assets/stylesheets/media_queries.scss
@@ -25,4 +25,17 @@
     font-size: 2rem
   }
 
+  .gag-checkbox-label {
+    padding: 5px 10px;
+    width: 100%;
+  }
+
+  .input_wrapper {
+    width: 100%;
+    border: solid 1px #ced4da;
+    // border-top-right-radius: 0;
+    // border-bottom-right-radius: 0;
+    // border-right-width: 1;
+  }
+
 }//end 768px
